# nginx-static-analysis

./: .SRCINFO  .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PKGBUILD  README.md  build.sh  docker-compose.yaml  flake.nix  main.py  pyproject.toml  runtests.sh  setup.py  shell.nix
.distrobox/: Dockerfile
.github/workflows/: publish.yaml  test.yaml
debian/: changelog  control
example_nginx/: nginx.conf
example_nginx/relative_include/: relative_include.conf  relative_nested_include.conf
example_nginx/servers/: example.com.conf  testalex.hypernode.io.conf  verylargefile.conf
example_nginx/servers/include/: nested.conf  relative_include.conf
example_nginx/servers/include/nested/: nested_relative_include.conf
nginx_analysis/: analysis.py  dataclasses.py  filter.py  input.py  log.py  main.py  output.py  url.py
requirements/: base.txt  development.txt
scripts/: integration_tests.sh  verify_setup.sh
tests/: integration_tests.sh  testcase.py
tests/integration/: test_directive.py  test_integration.py  test_url.py
tests/unit/analysis/: test_find_matches_in_children.py  test_get_directive_values_from_line.py  test_get_unique_directives.py  test_nginx_to_regex.py  test_parse_config.py
tests/unit/dataclasses/: test_combined_filters.py  test_directive_filter.py  test_root_nginx_config.py
tests/unit/input/: test_get_args.py
tests/unit/log/: test_get_nginx_logformat.py  test_logformat_to_regex_pattern.py  test_logline_to_filters.py  test_parse_logline.py
tests/unit/url/: test_get_port_for_url.py
